--- a/GardenGroup/UserControls/TicketOverview.xaml
+++ b/GardenGroup/UserControls/TicketOverview.xaml
@@ -4,20 +4,57 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:UI.UserControls"
-             mc:Ignorable="d" Loaded="UserControl_Loaded">
-    <Grid Background="White"  MinWidth="450">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="75"/>
-            <RowDefinition Height="75"/>
-            <RowDefinition/>
-        </Grid.RowDefinitions>
-        <Label Grid.Row="0" Content="Overview Tickets" HorizontalAlignment="Left" FontSize="48"/>
-        <Border BorderBrush="Black" BorderThickness="1" Grid.Row="1" CornerRadius="4" Background="White" Margin="0,20,0,20" HorizontalAlignment="Left" Width="250">
-            <TextBox Grid.Row="1" TextWrapping="Wrap" Text="Filter By Email" FontSize="22" BorderThickness="0" Background="{x:Null}"/>
-        </Border>
-        <Border BorderBrush="Black" BorderThickness="1" Grid.Row="1" Height="50" CornerRadius="7" HorizontalAlignment="Right" Background="#FF159BD4" Width="175">
-            <Button x:Name="IncidentButton" Content="CREATE INCIDENT" FontSize="14" Padding="15,1,15,1" BorderThickness="0" Background="{x:Null}" Click="IncidentButton_Click" Foreground="White"/>
-        </Border>
-        <DataGrid Grid.Row="2" d:ItemsSource="{d:SampleData ItemCount=15}" MinHeight="200"/>
-    </Grid>
+             mc:Ignorable="d" Loaded="UserControl_Loaded"
+			 DataContext="this">
+
+	<Grid Background="White" MinWidth="550">
+		<Grid.RowDefinitions>
+			<RowDefinition Height="75"/>
+			<RowDefinition Height="75"/>
+			<RowDefinition/>
+		</Grid.RowDefinitions>
+
+		<Label Grid.Row="0" Content="Overview Tickets" HorizontalAlignment="Left" FontSize="48"/>
+
+
+		<StackPanel Grid.Row="1" Orientation="Horizontal">
+			<ComboBox x:Name="filterType" HorizontalAlignment="Left" Grid.Row="1" Width="125" Margin="0,20,15,20" SelectedIndex="0" VerticalContentAlignment="Center" FontSize="16">
+				<ComboBoxItem Content="Title"/>
+				<ComboBoxItem Content="Status"/>
+				<ComboBoxItem Content="Assigned to"/>
+				<ComboBoxItem Content="AND (&amp;) OR (|)"/>
+			</ComboBox>
+
+			<Border BorderBrush="Black" BorderThickness="1" Grid.Row="1" CornerRadius="4" Background="White" Margin="0,20,0,20" HorizontalAlignment="Left" Width="250">
+				<TextBox x:Name="tbFilterInput" TextWrapping="Wrap" Text="" FontSize="22" BorderThickness="0" Background="{x:Null}" TextChanged="tbFilterInput_TextChanged"/>
+			</Border>
+
+		</StackPanel>
+
+
+
+
+		<Border BorderBrush="Black" BorderThickness="1" Grid.Row="1" Height="50" CornerRadius="7" HorizontalAlignment="Right" Background="#FF159BD4" Width="175">
+			<Button x:Name="IncidentButton" Content="CREATE INCIDENT" FontSize="14" Padding="15,1,15,1" BorderThickness="0" Background="{x:Null}" Foreground="White"/>
+		</Border>
+
+		<DataGrid x:Name="TicketList" ItemsSource="{Binding Tickets}" Grid.Row="2" MinHeight="200" AutoGenerateColumns="False" CanUserAddRows="False">
+			<!--<DataGrid.ItemContainerStyle>
+				<Style TargetType="{x:Type ListViewItem}">
+					-->
+			<!-- Setters, Triggers, etc. -->
+			<!--
+				</Style>
+			</DataGrid.ItemContainerStyle>-->
+			<DataGrid.Columns>
+				<DataGridTextColumn Header="Title" Binding="{Binding title}"/>
+				<DataGridTextColumn Header="Status" Binding="{Binding status}"/>
+				<DataGridTextColumn Header="Priority" Binding="{Binding priority}"/>
+				<!-- <DataGridTextColumn Header="Reported by" Binding="{Binding reported_by.name}"/> -->
+				<DataGridTextColumn Header="Assigned to" Binding="{Binding assigned_to.name}"/>
+				<!-- <DataGridTextColumn Header="Occurred at" Binding="{Binding occurred_at}"/> -->
+				<DataGridTextColumn Header="Created at" Binding="{Binding created_at}"/>
+			</DataGrid.Columns>
+		</DataGrid>
+	</Grid>
 </UserControl>
