Add basic navigation

--- a/GardenGroup/MainWindow.xaml
+++ b/GardenGroup/MainWindow.xaml
@@ -17,5 +17,8 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <ScrollViewer x:Name="svMainContent" Grid.Column="1" Grid.Row="1" VerticalScrollBarVisibility="Auto"/>
+        <Button x:Name="dashboardButton" Grid.Column="1" Content="Dashboard" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="18" Visibility="Hidden" Click="dashboardButton_Click"/>
+        <Button x:Name="ticketsButton" Grid.Column="1" Content="Tickets" HorizontalAlignment="Left" Margin="96,0,0,0" VerticalAlignment="Center" FontSize="18" Visibility="Hidden" Click="ticketsButton_Click"/>
+        <Button x:Name="employeesButton" Grid.Column="1" Content="Employees" HorizontalAlignment="Left" Margin="159,0,0,0" VerticalAlignment="Center" FontSize="18" Visibility="Hidden" Click="employeesButton_Click"/>
     </Grid>
 </Window>
