--- a/GardenGroup/UserControls/PwResetCode.xaml
+++ b/GardenGroup/UserControls/PwResetCode.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="UI.UserControls.PwResetScreen"
+﻿<UserControl x:Class="UI.UserControls.PwResetCode"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -12,7 +12,7 @@
         <Label x:Name="emailInputLabel" Content="Email" Margin="0,163,0,0" HorizontalAlignment="Center"/>
         <TextBox x:Name="emailInput" Margin="0,189,0,0" VerticalAlignment="Top" Width="120"/>
 
-        <Button x:Name="sendButton" Content="Send reset code" HorizontalAlignment="Center" Margin="0,212,0,0" VerticalAlignment="Top" Width="120" Click="sendButton_Click" RenderTransformOrigin="0.448,-1.463"/>
+        <Button x:Name="verifyButton" Content="Send reset code" HorizontalAlignment="Center" Margin="0,212,0,0" VerticalAlignment="Top" Width="120" Click="verifyButton_Click" RenderTransformOrigin="0.448,-1.463"/>
 
         <Label x:Name="errorLabel" Content="" HorizontalContentAlignment="Center" HorizontalAlignment="Center" Margin="0,237,0,0" VerticalAlignment="Top" Foreground="Red" Width="780"/>
     </Grid>
