--- a/GardenGroup/UserControls/PwResetCode.xaml
+++ b/GardenGroup/UserControls/PwResetCode.xaml
@@ -8,11 +8,12 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="White">
         <Label x:Name="resetLabel" Content="Reset Password" HorizontalAlignment="Center" Margin="0,91,0,0" VerticalAlignment="Top" FontSize="36"/>
+        <Label Content="If the entered email is a valid email in our system, you should have recieve a 6-digit code. Please enter it below!" Foreground="Green" HorizontalAlignment="Center" Margin="0,137,0,0" VerticalAlignment="Top"/>
 
-        <Label x:Name="emailInputLabel" Content="Email" Margin="0,163,0,0" HorizontalAlignment="Center"/>
-        <TextBox x:Name="emailInput" Margin="0,189,0,0" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="codeInputLabel" Content="Code" Margin="0,163,0,0" HorizontalAlignment="Center"/>
+        <TextBox x:Name="codeInput" Margin="0,189,0,0" VerticalAlignment="Top" Width="120"/>
 
-        <Button x:Name="verifyButton" Content="Send reset code" HorizontalAlignment="Center" Margin="0,212,0,0" VerticalAlignment="Top" Width="120" Click="verifyButton_Click" RenderTransformOrigin="0.448,-1.463"/>
+        <Button x:Name="verifyButton" Content="Verify code" HorizontalAlignment="Center" Margin="0,212,0,0" VerticalAlignment="Top" Width="120" Click="verifyButton_Click" RenderTransformOrigin="0.448,-1.463"/>
 
         <Label x:Name="errorLabel" Content="" HorizontalContentAlignment="Center" HorizontalAlignment="Center" Margin="0,237,0,0" VerticalAlignment="Top" Foreground="Red" Width="780"/>
     </Grid>
