--- a/GardenGroup/UserControls/CreateTicket.xaml
+++ b/GardenGroup/UserControls/CreateTicket.xaml
@@ -30,7 +30,7 @@
         <Label x:Name="lblDescription" Content="Description:" HorizontalAlignment="Left" VerticalAlignment="Center"  Grid.Row="5" Grid.Column="0"/>
         <TextBox x:Name="txtBoxDescription" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Center" Width="238" Height="50" Grid.Row="5" Grid.Column="1" Margin="39,0,0,0"/>
         <Label x:Name="lblTitle" Content="Create new incident ticket" HorizontalAlignment="Left" Margin="150,1,0,0" VerticalAlignment="Top" FontSize="24" Grid.ColumnSpan="2"/>
-        <Button x:Name="btnCancel" Content="Cancel" HorizontalAlignment="Left" VerticalAlignment="Center" Height="37" Width="90"  Grid.Row="7" Grid.Column="1" Margin="187,0,0,0"/>
+        <Button x:Name="btnCancel" Content="Cancel" HorizontalAlignment="Left" VerticalAlignment="Center" Height="37" Width="90"  Grid.Row="7" Grid.Column="1" Margin="187,0,0,0" Click="btnCancel_Click"/>
         <Button x:Name="btnSubmit" Content="Submit ticket" Margin="87,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="90" Height="37" Background="#FF0090FF" Foreground="White" Grid.Row="7" Grid.Column="1" Click="btnSubmit_Click"/>
 
     </Grid>
