--- a/GardenGroup/UserControls/TicketOverview.xaml
+++ b/GardenGroup/UserControls/TicketOverview.xaml
@@ -22,8 +22,9 @@
 				<ComboBoxItem Content="Status"/>
 				<ComboBoxItem Content="Assigned to"/>
                 <ComboBoxItem Content="Priority"/>
-                <ComboBoxItem Content="AND (&amp;) OR (|)"/>
-            </ComboBox>
+				<ComboBoxItem Content="AND (&amp;) OR (|)"/>
+				<ComboBoxItem Content="Full search"/>
+			</ComboBox>
 
 			<Border BorderBrush="Black" BorderThickness="1" CornerRadius="4" Background="White" Width="250" Height="35" Margin="0,0,5,0">
 				<TextBox x:Name="tbFilterInput" TextWrapping="Wrap" Text="" FontSize="22" BorderThickness="0" Background="{x:Null}" TextChanged="tbFilterInput_TextChanged"/>
