--- a/GardenGroup/UserControls/TicketDetail.xaml
+++ b/GardenGroup/UserControls/TicketDetail.xaml
@@ -1,7 +1,8 @@
 ﻿<Window x:Class="UI.UserControls.TicketDetail"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Ticket Details" Height="500" Width="600">
+        Title="Ticket Details" Height="500" Width="800"
+        >
 
     <Grid Margin="10">
         <Grid.RowDefinitions>
@@ -38,6 +39,8 @@
         </StackPanel>
 
         <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Stretch" Margin="0,10,0,0">
+            <Label x:Name="labelPersonInCharge" Content="Assign to: " Height="26" Visibility="Hidden"/>
+            <ComboBox x:Name="ComboBoxEmployee" Width="86" Margin="5" Visibility="Hidden" SelectionChanged="ComboBox_SelectionChanged"/>
             <TextBox x:Name="NewCommentTextBox" Width="400" Height="30" Margin="0,0,10,0" VerticalAlignment="Center"/>
             <Button Content="Submit" Width="100" Height="30" Click="AddCommentButton_Click" VerticalAlignment="Center"/>
         </StackPanel>
